 The admin workqueue can be used even if the interface is not up. OK'd by thorpej@. Will fixes PR#55534 reported by Shinichi Doyashiki